--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,8 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #555555; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #222222; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #5cb874; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  /*  --accent-color: #5cb874; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #5d6e26;
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -30,11 +31,13 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #555555;  /* The default color of the main navmenu links */
-  --nav-hover-color: #5cb874; /* Applied to main navmenu links when they are hovered over or active */
+  /*--nav-hover-color: #5cb874; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #5d6e26; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #555555; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #5cb874; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  /* --nav-dropdown-hover-color: #5cb874; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-hover-color: #5d6e26; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -53,10 +56,15 @@
 }
 
 .accent-background {
-  --background-color: #5cb874;
+  /* --background-color: #5cb874; */
+  --background-color: #95b446;
+  /* --background-color: #5d6626; */
+
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #80c792;
+  /*--surface-color: #80c792;*/
+  --surface-color: #4a9934;
+
 }
 
 /* Smooth scroll */
@@ -891,7 +899,7 @@ section,
 
 .hero .carousel-item:before {
   content: "";
-  background: color-mix(in srgb, var(--background-color), transparent 30%);
+  background: color-mix(in srgb, var(--background-color), transparent 55%);
   position: absolute;
   inset: 0;
   z-index: 2;
@@ -1217,8 +1225,10 @@ section,
 }
 
 .services .service-item.item-teal .icon {
-  color: #20c997;
-  background: rgba(32, 201, 151, 0.1);
+  /* color: #20c997;
+  background: rgba(32, 201, 151, 0.1); */
+  color: #5d6e26;
+  background: rgba(149, 180, 70, 0.5);
 }
 
 .services .service-item.item-red .icon {
@@ -1855,4 +1865,17 @@ section,
 --------------------------------------------------------------*/
 .starter-section {
   /* Add your styles here */
+}
+
+video {
+  width: auto;
+  height: 100%;
+}
+
+/* Para pantallas de 768px o más (desktop) */
+@media (min-width: 768px) {
+  video {
+    width: 100%; 
+    height: auto;
+  }
 }
